added get user by id, start update user
