# pkg/handler/users.go
@@ -4,6 +4,7 @@ import (
 	"API/pkg/models"
 	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -72,10 +73,74 @@ func (h *Handler) getUsers(c *gin.Context) {
 	})
 }
 
+// @Summary Get Uset BY ID
+// @Description Get Uset BY ID
+// @Security    BearerAuth
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param id path int true "user data"
+// @Success 200 {object} models.User
+// @Failure 400 {object} map[string]string
+// @Failure 404 {object} map[string]string
+// @Router /api/users/{id} [get]
 func (h *Handler) getUserByID(c *gin.Context) {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
+		return
+	}
+
+	user, err := h.service.GetUserByID(id)
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		return
+	}
+
+	c.JSON(http.StatusOK, map[string]interface{}{
+		"user": user,
+	})
 }
 
+// @Summary Update User BY ID
+// @Description Update User BY ID
+// @Security    BearerAuth
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param id path int true "user data"
+// @Success     200 {object} map[string]string "message"
+// @Failure 400 {object} map[string]string
+// @Failure 404 {object} map[string]string
+// @Router /api/users/{id} [put]
 func (h *Handler) updateUser(c *gin.Context) {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
+		return
+	}
+
+	var userData models.User
+	if err := c.ShouldBindJSON(&userData); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request body"})
+		return
+	}
+
+	_, err = h.service.GetUserByID(id)
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		return
+	}
+
+	err = h.service.UpdateUser(userData, id)
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		return
+	}
+
+	c.JSON(http.StatusOK, map[string]interface{}{
+		"message": fmt.Sprintf("User was updated with ID: %d", userData.ID),
+	})
 }
 
 func (h *Handler) deleteUser(c *gin.Context) {
